# journal-rust-backend

./: .gitignore  Cargo.toml  README.md  clippy  config.json  install.sh  run
data/: schema.sql
src/: db.rs  lib.rs  main.rs  routes.rs  session.rs
src/db/: note.rs  user.rs
src/routes/: account.rs  auth.rs  images.rs  notes.rs
